[gd_scene format=3 uid="uid://ce55i66bmts2"]

[ext_resource type="Script" uid="uid://bndhshrq2irvr" path="res://scripts/ui/start_screen.gd" id="1_kq4sj"]
[ext_resource type="Texture2D" uid="uid://btn4ss8icu46" path="res://assets/sprites/titlescreen.png" id="2_rnux4"]

[node name="startScreen" type="Control" unique_id=1047627570]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kq4sj")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1450802883]
layout_mode = 0
offset_right = 640.0
offset_bottom = 680.0
texture = ExtResource("2_rnux4")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1654813338]
layout_mode = 0
offset_left = 67.0
offset_top = 310.0
offset_right = 228.0
offset_bottom = 471.0
rotation = -0.06357172
scale = Vector2(0.6822628, 0.6822628)
theme_override_constants/separation = 10

[node name="start" type="Button" parent="VBoxContainer" unique_id=762560588]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
flat = true

[node name="controls" type="Button" parent="VBoxContainer" unique_id=111438727]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
flat = true

[node name="quit" type="Button" parent="VBoxContainer" unique_id=947502198]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
flat = true

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
